<resources>
    <string name="app_name">Tutorin</string>
    <string name="app_name_lowercase">tutorin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_onboarding_1">Image best mentor</string>
    <string name="img_onboarding_2">Image quality mentor</string>
    <string name="img_onboarding_3">Image all your search in one app</string>
    <string name="img_onboarding_4">Image make price as you go</string>
    <string name="tv_masuk">Masuk</string>
    <string name="tv_search_tutor">Cari Tutor</string>
    <string name="img_login">Gambar login ke aplikasi</string>
    <string name="tv_ask_login">Belum memiliki akun? <u>Daftar sekarang</u></string>
    <string name="tv_ask_register">Sudah memiliki akun? <u>Login sekarang</u></string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_repassword">Re Password</string>
    <string name="et_hint_email">Email</string>
    <string name="btn_login">Masuk</string>
    <string name="img_tutorin">text typography tutorin</string>
    <string name="tv_onboarding_1">Temukan Mentor Terbaik dengan AI Pintar</string>
    <string name="tv_onboarding_2">Mentor Berkualitas Tinggi Hanya Sejauh Klik</string>
    <string name="tv_onboarding_3">Seluruh Urusan dalam Satu Aplikasi</string>
    <string name="tv_onboarding_4">Dapatkan Penawaran Terbaik di Lokasi Anda</string>
    <string name="tv_desc_onbaording_1">Selamat datang di Tutorin!, Cukup isi kolom keinginan anda, dan biarkan AI kami mencocokkan Anda dengan mentor yang tepat.</string>
    <string name="tv_desc_onbaording_2">Telusuri profil mereka, lihat kualifikasi, dan pilih mentor yang sesuai dengan bidang dan pengalaman yang Anda butuhkan.</string>
    <string name="tv_desc_onbaording_3">Mencari mentor, menjadwalkan sesi, hingga berkomunikasi, lakukan semuanya dalam 1 aplikasi.</string>
    <string name="tv_desc_onbaording_4">Kami memahami kebutuhan  anda dan memberikan penawaran yang tepat berdasarkan lokasi anda berada.</string>
    <string name="btn_lewati">Lewati</string>
    <string name="cd_btn_next">Selanjutnya</string>
    <string name="btn_end">Selesaikan</string>
    <string name="tv_header_register">Register</string>
    <string name="tv_desc_register_1">Buat akun baru dan nikmati pengalaman mencari mentor dengan mudah dan cepat di aplikasi Tutorin.</string>
    <string name="tv_desc_register_2">Silahkan swipe untuk memilih</string>
    <string name="btn_view_register_learner">Arah penunjuk atas ke register learner page</string>
    <string name="btn_view_register_tutor">Arah penunjuk atas ke register tutor page</string>
    <string name="img_register_learner">Gambar orang mendaftar ke aplikasi</string>
    <string name="btn_selanjutnya">Selanjutnya</string>
    <string name="tv_tutor">Tutor</string>
    <string name="tv_learner">Learner</string>
    <string name="tv_learner_register">Silahkan isi data kalian sesuai dengan ketentuan yang ada yaa.</string>
    <string name="et_hint_phone_number">Nomor Telepon</string>
    <string name="et_hint_domicile">Domisili</string>
    <string name="et_language">Bahasa</string>
    <string name="et_topic">Mata Pelajaran</string>
    <string name="et_criteria">Masukkan kriteria mengajar</string>
    <string name="btn_register">Daftar</string>
    <string name="searchbar_hint">Cari mentor favoritmu dengan bantuan AI</string>
    <string name="greeting_learner">Selamat Datang, %1$s</string>
    <string name="welcome_learner_1">Mau belajar apa hari ini?</string>
    <string name="welcome_learner_2">AI kami akan mencocokkan kamu dengan mentor yang paling sesuai dengan kebutuhanmu, cari mentor dengan kriteria favoritmu dengan sangat mudah sekarang.</string>
    <string name="welcome_learner_3">Jadwal Kamu</string>
    <string name="welcome_learner_4">Tutor Terpopuler</string>
    <string name="total_session">%d Sesi</string>
    <string name="see_more_activities"><u>Lihat Semua Jadwal</u></string>
    <string name="time_session">12.45</string>
    <string name="tutor_name">Muhammad Alfarizky</string>
    <string name="tutor_specialist">Mathematics Expert</string>
    <string name="tutor_total_learner">%d Learner</string>
    <string name="tutor_rating">%d/5</string>
    <string name="star_icon">star icon</string>
    <string name="tab_incoming_tutor">Incoming</string>
    <string name="tab_ongoing_tutor">Ongoing</string>
    <string name="tv_tutoring_done"><u>Selesai</u></string>
    <string name="search_tutor">Temukan Tutor</string>
    <string name="rb_male">Laki laki</string>
    <string name="rb_female">Perempuan</string>
    <string name="tv_choose_day">Pilihan Hari</string>
    <string name="cb_senin">Senin</string>
    <string name="cb_selasa">Selasa</string>
    <string name="cb_rabu">Rabu</string>
    <string name="cb_kamis">Kamis</string>
    <string name="cb_jumat">Jumat</string>
    <string name="cb_sabtu">Sabtu</string>
    <string name="cb_minggu">Minggu</string>
    <string name="tv_choose_time">Pilihan Waktu</string>
    <string name="cb_clock_1">09.00 - 11.00</string>
    <string name="cb_clock_2">11.00 - 13.00</string>
    <string name="cb_clock_3">13.00 - 15.00</string>
    <string name="cb_clock_4">15.00 - 17.00</string>
    <string name="cb_clock_5">17.00 - 19.00</string>
    <string name="cb_clock_6">19.00 - 21.00</string>
    <string name="btn_search_tutor">Cari dengan AI</string>
    <string name="actv_jumlah_sesi">Jumlah Sesi</string>
    <string name="iv_logotype">Logotype untuk tutorin apps</string>
    <string name="tv_title_register_learner">Register Learner</string>
    <string name="et_hint_re_password">Re Password</string>
    <string name="tv_register_tutor">Register Tutor</string>
    <string name="et_hint_notelp">Nomor Telepon</string>
    <string name="actv_hint_pendidikan">Tingkat Pendidikan</string>
    <string name="tv_jenis_kelamin">Jenis Kelamin</string>
    <string name="tv_perempuan">Perempuan</string>
    <string name="tv_laki_laki">Laki laki</string>
    <string name="et_domisili">Domisili</string>
    <string name="et_hint_bahasa">Bahasa</string>
    <string name="et_hint_kriteria">Kriteria Mengajar</string>
    <string name="et_hint_metode">Metode mengajar (online, offline, dst)</string>
    <string name="tv_error_jenis_kelamin">Pilih jenis kelamin anda</string>
    <string name="et_hint_name">Nama Lengkap</string>
    <string name="et_nomor_akun">Nomor Akun</string>
    <string name="tb_title_upload_ktp">Upload KTP</string>
    <string name="btn_select_image">Galeri</string>
    <string name="btn_camera">Kamera</string>
    <string name="btn_finish">Selesaikan pendaftaran</string>
    <string name="btn_end_test">Selesaikan test</string>
    <string name="tb_title_detail_register">Detail Register</string>
    <string name="btn_daftar">Daftar</string>
    <string-array name="tingkat_pendidikan">
        <item>SD/MI</item>
        <item>SMP/MTS</item>
        <item>SMA/MA/SMK</item>
        <item>D1/D2/D3</item>
        <item>D4/S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="jumlah_sesi">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="tutor">Tutor</string>
    <string name="tv_tutor_page_desc">Jangan sampai lupa untuk melakukan jadwal tutoring dengan tutor kamu ya.</string>
    <string name="bt_photo_validation">Validasi foto Kehadiran</string>
    <string name="chat_button">chat button</string>
    <string name="tv_tutor_name">Ilham Alfarizky</string>
    <string name="tv_tutoring_loc">Google Meet</string>
    <string name="tv_tutor_topic">Mathematics Expert</string>
    <string name="tv_time_session">Formatter date and time</string>
    <string name="tb_detail_tutoring">Detail Tutoring</string>
    <string name="tv_detail_tutoring_desc">Cek progress tutoring kamu dengan tutor pada bagian dibawah ini</string>
    <string name="tv_tutor_username">\@ilhamAlfa</string>
    <string name="tv_validation_desc">Validasi bukti kehadiran yang sudah dikirimkan oleh tutor yang sudah dikirimkan oleh tutor</string>
    <string name="session_number">Sesi %d</string>
    <string name="session_location">Real Estate DCafe Yogyakarta, Gambiran, Sorogenen, Grabakan</string>
    <string name="ic_location">ic location</string>
    <string name="ic_clock">ic clock</string>
    <string name="direct_loc">Buka di Maps</string>
    <string name="ic_error">ic error</string>
    <string name="ic_forward">ic forward</string>
    <string name="accept">Terima</string>
    <string name="decline">Tolak</string>
    <string name="photo_validation">photo validation</string>
    <string name="tb_result_tutors">Berdasarkan Kriteriamu</string>
    <string name="tv_teaching_criteria">Senang mengajari di lokasi lokasi cozy seperti di cafe atau relaxing place lainnya, yang dapat membuat otak menjadi segar</string>
    <string name="result_desc_1">AI kami telah berhasil mengumpulkan tutor sesuai dengan kriteria yang kamu masukkan</string>
    <string name="result_desc_2">Kamu bisa memilih 1 tutor yang kamu mau, jadi pilih dengan bijak yaa</string>
    <string name="result_desc_3">Paling cocok dengan kriteriamu</string>
    <string name="ic_stars">icon stars</string>
    <string name="result_desc_4">Mentor Lainnya</string>
    <string name="tutor_education">S1 - Sistem Informasi</string>
    <string name="tv_tutor_rating">4.8/5</string>
    <string name="tv_no_session">Belum ada sesi tutoring</string>
    <string name="btn_submit_rating">Berikan Rating</string>
    <string name="tb_title_update_password">Update Password</string>
    <string name="tv_tips_lupa_password">Jangan lupa untuk menyimpan kata sandi anda yang baru, apabila terlupa, kalian juga bisa meresetnya pada bagian Lupa Password</string>
    <string name="btn_simpan">Simpan</string>
    <string name="tv_password_asterisk">*****</string>
    <string name="tv_metode_belajar">Metode Belajar</string>
    <string name="tv_tingkat_edukasi">Tingkat Edukasi</string>
    <string name="tv_ketersediaan">Ketersediaan</string>
    <string name="tv_rekening">Rekening</string>
    <string name="tv_berkas_tutor">Berkas Tutor</string>
    <string name="tv_cv">Curriculum Vitae</string>
    <string name="tv_file_status">Terupload</string>
    <string name="tv_ktp">KTP</string>
    <string name="cd_iv_user_tutor_profile">gambar profil pengguna</string>
    <string name="cd_image_change_cv">mengganti data curriculum vitae</string>
    <string name="cd_image_change_profile">mengganti data foto profil pengguna</string>
</resources>