<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_tutoring"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_yellowish"
    android:orientation="vertical"
    tools:context=".ui.learner.tutors.tutoring.detail.DetailTutoring">

    <Toolbar
        android:id="@+id/tb_detail_tutoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/tb_detail_tutoring"
        android:titleTextAppearance="@style/AppTheme.AppBarOverlay"
        android:titleTextColor="@color/base_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:paddingHorizontal="20dp"
            android:paddingBottom="15dp"
            android:text="@string/tv_detail_tutoring_desc" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_session_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_yellow"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/iv_icon_error"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:contentDescription="@string/ic_error"
                android:src="@drawable/baseline_error_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_validate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/bt_photo_validation"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_error"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc_validate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:text="@string/tv_validation_desc"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/iv_icon_forward"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_validate" />

            <ImageView
                android:id="@+id/iv_icon_forward"
                android:layout_width="20dp"
                android:layout_height="36dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ic_forward"
                android:scaleType="center"
                android:src="@drawable/forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/tertiary_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tertiary_blue"
            android:paddingHorizontal="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_tutor_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="@string/tv_tutor_name"
                android:textColor="@color/base_pure_white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tutor_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/tv_tutor_username"
                android:textColor="@color/material_dynamic_neutral70"
                app:layout_constraintStart_toStartOf="@+id/tv_tutor_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_tutor_name" />

            <TextView
                android:id="@+id/tv_tutor_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/tv_tutor_topic"
                android:textColor="@color/material_dynamic_neutral70"
                app:layout_constraintStart_toStartOf="@+id/tv_tutor_username"
                app:layout_constraintTop_toBottomOf="@+id/tv_tutor_username" />

            <ImageButton
                android:id="@+id/btn_chat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_border_11"
                android:backgroundTint="@color/tertiary_yellow"
                android:contentDescription="@string/chat_button"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chat"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/primary_yellow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_tutoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingHorizontal="20dp"
            tools:listitem="@layout/item_detail_tutoring" />

    </LinearLayout>

</LinearLayout>